
	* gtkglext/gtkglext.cabal.in, gtkglext/gtkglext.pkg.in,
	gtkglext/gtkglext.package.conf.in: new build files for the gtkglext
	package.

	* tools/hierarchyGen/hierarchy.list: add extra GL classes.

	* configure.ac, Makefile.am: add build system support for the new
	gtkglext package.

	* gtkglext/Graphics/UI/Gtk/OpenGL/Types.chs: remove file that was
	accidentally added to cvs.

2005-11-08 Duncan Coutts <duncan@coutts.uklinux.net>

	* sourceview/sourceview.pkg.in: probable fix for the problem of
	building the sourceview demo using -fvia-C with ghc 6.2 or earlier.

	* Makefile.am: make it easier to use extra flags when building haddock
	docs. Also add a "dist-docs" target for building a docs tarball.

2005-11-07 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/General/Structs.hsc: deal with the case that
	widget->window might be null when the widget is not realized. Give an
	error message rather than segfaulting.

	* gtk/Graphics/UI/Gtk/General/Structs.hsc: do not fill in the 3 Pixmap
	GC attributes as null when they are Nothing as this causes an X11
	'BadPixmap' error.

	* TODO: remove some completed and old todo items.

	* configure.ac: add --enable-split-objs option (off by default).
	Substitute into mk/link-splitobjs.sh script and make it executable.

	* mk/common.mk: add a slightly different .hs -> .o build rule when
	using -split-objs

	* Makefile.am: add -split-objs to the HCFLAGS of the libs and set
	mk/link-splitobjs.sh as the linker command when	we configure using
	--enable-split-objs.

	* mk/link-splitobjs.sh.in: linker script to use when in
	--enable-split-objs mode.

	* configure.ac: updates suggested by the autoupdate script which
	checks for deprecated autoconf/automake macros. Also remove variables
	which used to be used by c2hs but are no longer used.

	* Makefile.am: add cairo/COPYRIGHT to EXTRA_DIST

	* cairo/Graphics/Rendering/Cairo/Internal/Surfaces/PNG.chs: correct
	location of COPYRIGHT file.
