@@ -1,6 +1,4 @@
 #include <gtksourceview/gtksourceview.h>
-#include <gtksourceview/gtksourcemarker.h>
 #include <gtksourceview/gtksourcelanguagesmanager.h>
 #include <gtksourceview/gtksourcetag.h>
-#include <gtksourceview/gtksourcemarker.h>
 #include <gtksourceview/gtksourceiter.h>
